@@ -11,6 +11,8 @@
 	- AI now properly dives to torpedo bombing altitude at start of bombing run.
 	- Torpedo bombing alt raised to 200m. 
 	- Improve torpedo lead when torpedo bombing.
+	- Fix AI not always prioritizing torpedoes over bombs for A2G vs naval targets.
+	- Adds option to choose between divebombing and level bombing.
 - Weapons:
 	-Missiles:
 		-Experimental torpedo running depth and depth-keeping.
